# e582

./: .gitignore  Readme.md  sz_final.ipynb  sz_sollcc.ipynb
cloudmask/: .gitignore  CMakeLists.txt  bitmap.cpp  bitmask.cpp  bitorig.cpp  cloudmask.pyx  doit.sh  dump_cloudmask.py  hist2d.py  hist_numba.py  level1_hist.py  level1_ocean.py  make_gallery.py  names.json  plot_bitmap.py  plot_cloudmask.py  plot_mask.py  read_cloudmask.py  sanity.py  setup.py  test_bin.py  test_bit.py  timeit.py  try_bandread.py
cloudmask/jenny/: make_gallery.py  names.json  plot_double.py  write_init.py
cloudmask/modis_cluster/: plot_cluster_iris.py
gallery/: build_gallery.py  jinja_responsive.tmpl
notebooks/: exponential_dist.ipynb  feb_2.ipynb  find_tile.ipynb  git_strip.ipynb  inverse_planck.ipynb  lambertian_reflector.ipynb  level2.ipynb  random.ipynb  s_level2.ipynb  satelliteA.ipynb  satelliteB.ipynb  satelliteC.ipynb  satelliteD.ipynb  simple_plotting.ipynb  sz_exponential_dist.ipynb  sz_find_tile.ipynb  sz_level2.ipynb  sz_mean_chlor.ipynb  sz_mean_chlor_problem.ipynb  sz_problem5_5.ipynb  sz_random.ipynb  sz_satelliteA.ipynb  sz_satelliteB.ipynb  sz_satelliteC.ipynb  sz_satelliteD.ipynb
src/: calc_chlor.py  level2.py  plot_latlon.py  reproject.py  satelliteD.py  sz_calc_chlor.py  sz_plot_latlon.py
ssmi/: bright_temps.h5  btemps.jan90  btemps.jul90  full_retrieve.py  interp_petty.py  micro_coeffs.h5  petty_python.py  plot_retrieve.py  read_micro.py  sst.jan90  sst.jul90  stephens_test.py  write_data.py
ssmi/fortran/: CMakeLists.txt  Makefile_fort  Readme_cython.rst  coef.f  doit.sh  emiss.f  eps2.f  epsilon.f  epsilon_real.f  kappa.f  newemiss.f  petty.h  petty.pyx  readdat.f  setup_petty.py  test_petty.py
utilities/: bin_calc.py  compat.py  dotbashrc  dotgitconfig  h5dump.py  nbstripout.py  planck.py  reproject.py  tile_calc.py
weights/: hydrostat.py  weight_sol.py
