#set(CMAKE_C_COMPILER /usr/local/bin/gcc-4.9)
#set(CMAKE_CXX_COMPILER /usr/local/bin/g++-4.9)
set(CMAKE_C_COMPILER gcc)
set(CMAKE_CXX_COMPILER g++)
cmake_minimum_required(VERSION 2.8)
project(temp)
set(CMAKE_Fortran_COMPILER gfortran)
enable_language(Fortran)
FILE(GLOB files_fortran "*.f")
add_library(petty STATIC ${files_fortran})
install(TARGETS petty ARCHIVE DESTINATION ${PROJECT_SOURCE_DIR}/lib)
